Revision history for Perl distribution PathTools.

3.10

 - eliminate_macros() and fixpath() in File::Spec::VMS are now
   deprecated, since they are MakeMaker-specific and now live inside
   MakeMaker. [Michael Schwern]

3.09  Tue Jun 14 20:36:50 CDT 2005

 - Added some block delimiters (brackets) in the Perl_getcwd_sv() XS
   function, which were necessary to separate the variable
   declarations from the statements when HAS_GETCWD is not
   defined. [Yves]

 - Apparently the _NT_cwd() routine is never defined externally like I
   thought it was, so I simplified the code around it.

 - When cwd() is implemented using the _backtick_pwd() function, it
   sometimes could create accidental undef entries in %ENV under perl
   5.6, because local($hash{key}) is somewhat broken.  This is now
   fixed with an appropriate workaround. [Neil Watkiss]

3.08  Sat May 28 10:10:29 CDT 2005

 - Fixed a test failure with fast_abs_path() on Windows - it was
   sensitive to the rootdir() change from version 3.07. [Steve Hay]

3.07  Fri May  6 07:46:45 CDT 2005

 - Fixed a bug in which the special perl variable $^O would become
   tainted under certain versions of perl. [Michael Schwern]

 - File::Spec->rootdir() was returning / on Win32.  Now it returns \ .
   [Michael Schwern]

 - We now avoid modifying @_ in tmpdir() when it's not strictly
   necessary, which reportedly provides a modest performance
   boost. [Richard Soderberg]

 - Made a couple of slight changes to the Win32 code so that it works
   (or works better) on Symbian OS phones.  [Jarkko Hietaniemi]

3.06  Wed Apr 13 20:47:26 CDT 2005
 
 (No changes in functionality)

 - Added a note to the canonpath() docs about why it doesn't collapse
   foo/../bar sections.

 - The internal-only function bsd_realpath() in the XS file now uses
   normal arg syntax instead of K&R syntax. [Nicholas Clark]

3.05  Mon Feb 28 07:22:58 CST 2005

 - Fixed a bug in fast_abs_path() on Win32 in which forward- and